Add some default routes and typed callback params

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "target": "ES2019",
     "sourceMap": true,
     "rootDir": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "alwaysStrict": true,
+    "strict": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules"
