--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "CC-PDDC",
   "type": "module",
   "dependencies": {
+    "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
     "express": "^4.17.1"
   },
