Add Mustache, Jest for TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "Node",
     "target": "ES2019",
     "sourceMap": true,
-    "rootDir": ".",
+    "rootDir": "src",
     "outDir": "dist",
     "alwaysStrict": true,
     "strict": true,
