--- a/package.json
+++ b/package.json
@@ -7,9 +7,21 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4"
   },
   "scripts": {
-    "server": "node --experimental-modules ./dist/main.js"
+    "server": "node --experimental-modules ./dist/main.js",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  },
+  "devDependencies": {
+    "@types/express-handlebars": "^3.1.0",
+    "@types/jest": "^25.2.1",
+    "jest": ">=25 <26",
+    "ts-jest": "^25.5.1",
+    "typescript": "^3.8.3"
   }
 }
